# olio-harjoitukset

H1/: main.cpp
H2/H2a/: CMakeLists.txt  main.cpp
H2/H2b/: CMakeLists.txt  main.cpp
H3/H3a/: CMakeLists.txt  main.cpp
H3/H3b/: CMakeLists.txt  main.cpp
H3/build-H3a-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  qtcsettings.cmake
H3/build-H3a-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/.qtc_clangd/: compile_commands.json
H4/: CMakeLists.txt  main.cpp
H5/: CMakeLists.txt  main.cpp
H6/H6a/: H6a.pro  main.cpp  myclass.cpp  myclass.h
H6/H6b/: H6b.pro  cpp.cpp  cpp.h  main.cpp
H6/build-H6b-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/: Makefile  Makefile.Debug  Makefile.Release
H6/build-H6b-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/.qtc_clangd/: compile_commands.json
H6/build-H6b-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/debug/: moc_cpp.cpp
build-H1-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  qtcsettings.cmake
build-H1-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/.qtc_clangd/: compile_commands.json
build-H5-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  qtcsettings.cmake
build-H5-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/.qtc_clangd/: compile_commands.json
build-H6b-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/: Makefile  Makefile.Debug  Makefile.Release
build-H6b-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/.qtc_clangd/: compile_commands.json
(+40 files in other folders)
